Updated Daily report

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,29 @@
-ageInfo = \
+report.ageInfo=\
 \n\  Age Report\n\
 \n\  Birthday: {0} ({1})\
 \n\     Today: {2}\
 \n\      Days: {3, number}\
 \n\       Age: {4}
+
+report.daily=\
+\n\  Daily Biorhythm Report:\n\
+\n\  Primary Biorhythms\n\
+\n\       {0}\
+\n\       {1}\
+\n\       {2}\n\
+\n\  Secondary Biorhythms\n\
+\n\       {3}\
+\n\       {4}\
+\n\       {5}\
+\n\       {6}
+
+report.weekly=\n\  Weekly Biorhythm Report:
+
+report.weekly.day=\
+\n\n\{0}\
+\n\       {1}\
+\n\       {2}\
+\n\       {3}
+
+
 
