--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,13 +17,14 @@ report.daily=\
 \n\       {5}\
 \n\       {6}
 
-report.weekly=\n\  Weekly Biorhythm Report:
+report.weekly.top=\
+\n\  Weekly Biorhythm Report:
 
 report.weekly.day=\
-\n\n\{0}\
-\n\       {1}\
-\n\       {2}\
-\n\       {3}
+\n\{0}\
+\n\    {1}\
+\n\    {2}\
+\n\    {3}
 
 
 
