--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,21 +1,22 @@
-report.ageInfo=\
-\n\  Age Report\n\
-\n\  Birthday: {0} ({1})\
-\n\     Today: {2}\
-\n\      Days: {3, number}\
-\n\       Age: {4}
+format.ageInfo=\
+%n  Age Report%n\
+%n  Birthday: %tA, %<tB %<td, %<tY (%s)\
+%n     Today: %tA, %<tB %<td, %<tY\
+%n      Days: %,d\
+%n       Age: %s%n
 
-report.daily=\
-\n\  Daily Biorhythm Report:\n\
-\n\  Primary Biorhythms\n\
-\n\       {0}\
-\n\       {1}\
-\n\       {2}\n\
-\n\  Secondary Biorhythms\n\
-\n\       {3}\
-\n\       {4}\
-\n\       {5}\
-\n\       {6}
+format.daily=\
+%n  Daily Biorhythm Report:%n\
+%n  Primary Biorhythms%n\
+%n       %s\
+%n       %s\
+%n       %s%n\
+%n  Secondary Biorhythms%n\
+%n       %s\
+%n       %s\
+%n       %s\
+%n       %s
+
 
 report.weekly.top=\
 \n\  Weekly Biorhythm Report:
