Add lucky day detection for AgeInfoReport

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,9 @@ format.ageInfo=\
 %n      Days: %,d\
 %n       Age: %s%n
 
+format.luckyDay=\
+%n  Today is a lucky day for a %2$s!%n
+
 format.daily=\
 %n  Daily Biorhythm Report:%n\
 %n  Primary Biorhythms%n\
