Deleted outdated code from WeeklyReport

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,15 +20,17 @@ format.daily=\
 %n       %s\
 %n       %s
 
+format.weekly.top=\
+%n  Weekly Biorhythm Report\
+%n  Year: %d, Week #%d:%n
 
-report.weekly.top=\
-\n\  Weekly Biorhythm Report:
+format.weekly.day=\
+%n  %tA, %<tB %<td, %<tY\
+%n      %s\
+%n      %s\
+%n      %s%n
 
-report.weekly.day=\
-\n\{0}\
-\n\    {1}\
-\n\    {2}\
-\n\    {3}
+
 
 
 
