Updated format for Weekly Report

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,13 +24,22 @@ format.weekly.top=\
 %n  Weekly Biorhythm Report\
 %n  Year: %d, Week #%d:%n
 
+# Format for a day in the Weekly Report
+#
+# The 1$ argument is the date of LocalDate type
+# arguments 2$, 3$, 4$ are strings representation of
+# physical, emotional and intellectual biorhythms
+#
 format.weekly.day=\
+%n  %1$-11tA %2$s\
+%n  %1$-4tb%1$-7td %3$s\
+%n  %1$-11tY %4$s%n
+
+format.weekly.biorhythm = %-12s %4d %%
+
+# Alternative format
+format.weekly.day2=\
 %n  %tA, %<tB %<td, %<tY\
 %n      %s\
 %n      %s\
 %n      %s%n
-
-
-
-
-
