Add README.md for AbstractRunner

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,10 +27,10 @@ format.weekly.top=\
 # Format for a day in the Weekly Report
 #
 # The 1$ argument is the date of LocalDate type
-# arguments 2$, 3$, 4$ are strings representation of
+# arguments 2$, 3$, 4$ are strings representations of
 # physical, emotional and intellectual biorhythms
 #
-format.weekly.day=\
+format.weekly.day2=\
 %n  %1$-11tA %2$s\
 %n  %1$-4tb%1$-7td %3$s\
 %n  %1$-11tY %4$s%n
@@ -38,7 +38,7 @@ format.weekly.day=\
 format.weekly.biorhythm = %-12s %4d %%
 
 # Alternative format
-format.weekly.day2=\
+format.weekly.day=\
 %n  %tA, %<tB %<td, %<tY\
 %n      %s\
 %n      %s\
